// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image upload renders properly with image details 1`] = `
<DocumentFragment>
  <div
    class="d-none"
  >
    <label
      class="form-label"
      for="image-select-input"
    >
      Select an image
    </label>
    <input
      class="form-control"
      id="image-select-input"
      type="file"
    />
  </div>
  <div
    class="position-relative overflow-hidden rounded mb-3"
    data-testid="move-by-click-target"
    style="user-select: none; cursor: crosshair;"
  >
    <img
      alt=""
      class="pe-none w-100"
      data-testid="load-image"
      src="src"
      style="filter: brightness(0.6);"
    />
    <img
      alt=""
      class="pe-none w-100 position-absolute start-0 top-0"
      src="src"
    />
    <div
      class="border border-danger border-3 position-absolute shadow"
      data-testid="bounding-box"
      style="cursor: grab;"
    />
  </div>
  <div
    class="d-flex justify-content-between align-items-center"
  >
    <span
      class="text-muted small mt-1"
      data-testid="upload-dimensions"
    >
      2 x 1
    </span>
    <button
      class="btn btn-sm btn-link text-danger"
      data-testid="remove-upload"
    >
      Remove
    </button>
  </div>
</DocumentFragment>
`;

exports[`image upload renders properly without image details 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <label
      class="form-label"
      for="image-select-input"
    >
      Select an image
    </label>
    <input
      class="form-control"
      id="image-select-input"
      type="file"
    />
  </div>
  <div
    class="position-relative overflow-hidden rounded d-none"
    data-testid="move-by-click-target"
    style="user-select: none; cursor: crosshair;"
  >
    <img
      alt=""
      class="pe-none w-100"
      data-testid="load-image"
      style="filter: brightness(0.6);"
    />
    <img
      alt=""
      class="pe-none w-100 position-absolute start-0 top-0"
    />
    <div
      class="border border-danger border-3 position-absolute shadow"
      data-testid="bounding-box"
      style="cursor: grab;"
    />
  </div>
</DocumentFragment>
`;
